--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   intl: ^0.18.1
   flutter_dotenv: ^5.1.0
   internet_connection_checker: ^1.0.0+1
+  shimmer: ^2.0.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
