--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   internet_connection_checker: ^1.0.0+1
   shimmer: ^2.0.0
-  uuid: ^3.0.6
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
