--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   shimmer: ^2.0.0
   uuid: ^3.0.6
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
